--- a/PR_F02/appsettings.QA.json
+++ b/PR_F02/appsettings.QA.json
@@ -7,10 +7,11 @@
         }
     },
     "Project": {
-        "Title": "Final Proyect - Development Env"
+        "Title": "Final Project - QA Env"
     },
     "ConnectionStrings": {
-        "Database": "DataSource = Development"
+        "Database": "QA"
     },
-    "EnvironmentName": "Development"
+    "EnvironmentName": "QA"
+
 }
