--- a/PR_F02/Properties/launchSettings.json
+++ b/PR_F02/Properties/launchSettings.json
@@ -1,30 +1,33 @@
 ﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:58793",
-      "sslPort": 44378
+    "$schema": "http://json.schemastore.org/launchsettings.json",
+
+    "profiles": {
+        "Development": {
+            "commandName": "Project",
+            "launchBrowser": false,
+            "launchUrl": "",
+            "applicationUrl": "http://localhost:5001",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
+        },
+        "QA": {
+            "commandName": "Project",
+            "launchBrowser": false,
+            "launchUrl": "",
+            "applicationUrl": "http://localhost:5001",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "QA"
+            }
+        },
+        "Production": {
+            "commandName": "Project",
+            "launchBrowser": false,
+            "launchUrl": "",
+            "applicationUrl": "http://localhost:5001",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Production"
+            }
+        }
     }
-  },
-  "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "PR_F02": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    }
-  }
 }
