--- a/PR_F02/appsettings.Production.json
+++ b/PR_F02/appsettings.Production.json
@@ -7,10 +7,11 @@
         }
     },
     "Project": {
-        "Title": "Final Proyect - Development Env"
+        "Title": "Final Project - Production Env"
     },
     "ConnectionStrings": {
-        "Database": "DataSource = Development"
+        "Database": "DataSource=Production"
     },
-    "EnvironmentName": "Development"
+    "EnvironmentName": "Production"
+
 }
