QUO-001: Creacion de Class Library Data

--- a/PR_F02/PR_F02.csproj
+++ b/PR_F02/PR_F02.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+	  <RootNamespace>UPB.FinalProject.PR_F02</RootNamespace>
+	  <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
